--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsnd --transpile-only --respawn --ignore-watch node_modules src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -rf ./dist && tsc",
+    "start:dev": "TZ=UTC tsnd --transpile-only --respawn --ignore-watch node_modules src/server.ts",
+    "start": "npm run build && TZ=UTC node ./dist/server",
+    "test": "TZ=UTC jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +17,7 @@
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
     "jest": "^28.1.0",
+    "ts-jest": "^28.0.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
   },
